third_party/llvm-project/llvm/test/CodeGen/AArch64/overlapping-copy-bundle-cycle.mir
# RUN: not llc -mtriple=aarch64-apple-ios -run-pass=greedy -run-pass=virtregrewriter %s -o /dev/null 2>&1 | FileCheck %s

# Check we don't infinitely loop on cycles in copy bundles.
# CHECK: error: register rewriting failed: cycle in copy bundle

---
name: func0
body: |
  bb.0:
    $x0 = IMPLICIT_DEF
    $q0_q1_q2_q3 = IMPLICIT_DEF
    $q1_q2_q3 = COPY $q0_q1_q2 {
      $q2_q3_q4 = COPY $q1_q2_q3
    }
    ST4i64 $q1_q2_q3_q4, 0, $x0
...
